# api/v1alpha/env.swagger.json
@@ -249,6 +249,32 @@
         ]
       }
     },
+    "/v1alpha/envs/{id}/sample_action": {
+      "get": {
+        "summary": "Get a sample action for the environment.",
+        "operationId": "SampleAction",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1alphaSampleActionResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "description": "ID of the environment.",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "EnvironmentAPI"
+        ]
+      }
+    },
     "/v1alpha/envs/{id}/step": {
       "post": {
         "summary": "Step through an environment.",
@@ -451,6 +477,36 @@
         }
       }
     },
+    "v1alphaBoxSpace": {
+      "type": "object",
+      "properties": {
+        "shape": {
+          "type": "array",
+          "items": {
+            "type": "string",
+            "format": "int64"
+          },
+          "description": "Shape of box."
+        },
+        "low": {
+          "type": "array",
+          "items": {
+            "type": "string",
+            "format": "int64"
+          },
+          "description": "From low."
+        },
+        "high": {
+          "type": "array",
+          "items": {
+            "type": "string",
+            "format": "int64"
+          },
+          "description": "To high."
+        }
+      },
+      "description": "A (possibly unbounded) box in R^n. Specifically, a Box represents the\nCartesian product of n closed intervals. Each interval has the form of one\nof [a, b], (-oo, b], [a, oo), or (-oo, oo)."
+    },
     "v1alphaCreateEnvRequest": {
       "type": "object",
       "properties": {
@@ -464,27 +520,9 @@
     "v1alphaCreateEnvResponse": {
       "type": "object",
       "properties": {
-        "id": {
-          "type": "string",
-          "title": "ID of the environment"
-        },
-        "observationShape": {
-          "type": "array",
-          "items": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "description": "Shape of the observation."
-        },
-        "numActions": {
-          "type": "integer",
-          "format": "int32",
-          "description": "Number of actions."
-        },
-        "maxEpisodeSteps": {
-          "type": "integer",
-          "format": "int32",
-          "description": "Maximum number of episode steps."
+        "environment": {
+          "$ref": "#/definitions/v1alphaEnvironment",
+          "description": "Environment created."
         }
       },
       "description": "Response from creating an environment."
@@ -509,6 +547,17 @@
       },
       "description": "Response from deleting a video."
     },
+    "v1alphaDiscreteSpace": {
+      "type": "object",
+      "properties": {
+        "n": {
+          "type": "string",
+          "format": "int64",
+          "description": "Upper bound of discrete space n-1."
+        }
+      },
+      "description": "A discrete space in math:`{ 0, 1, ..., n-1 \\}`."
+    },
     "v1alphaEnvironment": {
       "type": "object",
       "properties": {
@@ -519,6 +568,24 @@
         "id": {
           "type": "string",
           "description": "ID of the environment."
+        },
+        "actionSpace": {
+          "$ref": "#/definitions/v1alphaSpace",
+          "title": "Action space info"
+        },
+        "observationSpace": {
+          "$ref": "#/definitions/v1alphaSpace",
+          "title": "Observation space info"
+        },
+        "numActions": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Number of potential actions."
+        },
+        "maxEpisodeSteps": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Maximum number of episode steps."
         }
       },
       "description": "Environment agents can interact with."
@@ -620,6 +687,20 @@
       },
       "description": "Model which environments can be created from."
     },
+    "v1alphaMultiDiscreteSpace": {
+      "type": "object",
+      "properties": {
+        "discreteSpaces": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "description": "An array of discrete spaces."
+        }
+      },
+      "title": "The multi-discrete action space consists of a series of discrete action spaces with different number of actions in eachs.\n- It is useful to represent game controllers or keyboards where each key can be represented as a discrete action space\n- It is parametrized by passing an array of positive integers specifying number of actions for each discrete action space\nNote: Some environment wrappers assume a value of 0 always represents the NOOP action.\ne.g. Nintendo Game Controller\n- Can be conceptualized as 3 discrete action spaces:\n   1) Arrow Keys: Discrete 5  - NOOP[0], UP[1], RIGHT[2], DOWN[3], LEFT[4]  - params: min: 0, max: 4\n   2) Button A:   Discrete 2  - NOOP[0], Pressed[1] - params: min: 0, max: 1\n   3) Button B:   Discrete 2  - NOOP[0], Pressed[1] - params: min: 0, max: 1"
+    },
     "v1alphaObservation": {
       "type": "object",
       "properties": {
@@ -681,6 +762,43 @@
         }
       },
       "description": "Response with environment results."
+    },
+    "v1alphaSampleActionResponse": {
+      "type": "object",
+      "properties": {
+        "value": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Sample action value."
+        }
+      },
+      "description": "Response containing a sample action from the environment."
+    },
+    "v1alphaSpace": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "description": "Name of the space."
+        },
+        "discrete": {
+          "$ref": "#/definitions/v1alphaDiscreteSpace",
+          "description": "Discrete space info."
+        },
+        "box": {
+          "$ref": "#/definitions/v1alphaBoxSpace",
+          "description": "Box space info."
+        },
+        "multiDiscrete": {
+          "$ref": "#/definitions/v1alphaMultiDiscreteSpace",
+          "description": "Mult-discrete space info."
+        },
+        "structSpace": {
+          "$ref": "#/definitions/v1alphaStructSpace",
+          "description": "A struct of spaces."
+        }
+      },
+      "description": "A space."
     },
     "v1alphaStartRecordEnvRequest": {
       "type": "object",
@@ -746,6 +864,11 @@
         "nextEpisode": {
           "$ref": "#/definitions/v1alphaObservation",
           "description": "Observation for next episode."
+        },
+        "done": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": "The environment is finished."
         }
       },
       "description": "Response from stepping in an environment."
@@ -769,6 +892,19 @@
         }
       },
       "description": "Response from stopping the recording of an environment."
+    },
+    "v1alphaStructSpace": {
+      "type": "object",
+      "properties": {
+        "struct": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/v1alphaSpace"
+          },
+          "description": "Space struct."
+        }
+      },
+      "description": "A struct of spaces."
     },
     "v1alphaVideo": {
       "type": "object",
